qc pass: hdlc
---------------------------------- 2021-12-03 17:29:16
qc pass: fragmentation and reassembly
qc pass: no fragmentation nor reassembly
---------------------------------- 2021-12-05 06:37:53
qc pass: interop1: fragmentation and reassembly
qc pass: interop2: fragmentation and reassembly
qc pass: interop8: fragmentation and reassembly
qc pass: interop9: fragmentation and reassembly
---------------------------------- 2021-12-05 07:02:17
no qc pass: olab bgp ingress route filtering with routemap
no qc pass: labels bgp ingress route filtering with routemap
no qc pass: interop8: isis text authentication
qc pass: precise mtu enforcement
---------------------------------- 2021-12-05 08:55:38
no todo: shame texts in cmd.err
---------------------------------- 2021-12-06 09:25:02
qc pass: p4lang: replay window with openvpn
qc pass: p4lang: replay window with wireguard
---------------------------------- 2021-12-07 07:42:31
qc pass: lsrp dynamic metric
qc pass: pvrp dynamic metric
---------------------------------- 2021-12-08 16:40:08
no qc pass: pvrp dynamic metric
no qc pass: lsrp dynamic metric
qc pass: lsrp dynamic inband metric
qc pass: lsrp dynamic icmp metric
qc pass: lsrp dynamic udp metric
qc pass: lsrp dynamic twamp metric
qc pass: pvrp dynamic inband metric
qc pass: pvrp dynamic icmp metric
qc pass: pvrp dynamic udp metric
qc pass: pvrp dynamic twamp metric
---------------------------------- 2021-12-09 10:45:49
qc pass: isis dynamic icmp metric
qc pass: isis dynamic udp metric
qc pass: isis dynamic twamp metric
qc pass: ospf dynamic icmp cost
qc pass: ospf dynamic udp cost
qc pass: ospf dynamic twamp cost
---------------------------------- 2021-12-21 21:13:40
qc pass: monitor session over tunnel
qc pass: monitor session over pwhe
---------------------------------- 2021-12-21 21:27:35
qc pass: ingress mask matching access list
qc pass: egress mask matching access list
---------------------------------- 2022-01-10 14:14:43
qc pass: vrf route limit