@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.1.12-cur, done by cs@nop.
--;-;-;2022-01-12 08:44:32, took 00:06:26, with 100 workers, on 2521 cases, 0 failed, 0 traces, 2 retries
+-;-;-;2022-01-12 09:17:51, took 00:07:54, with 100 workers, on 2528 cases, 0 failed, 0 traces, 6 retries
 -;-;-;./rtr.bin
 http://sources.nop.hu/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.nop.hu/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
@@ -2506,6 +2506,13 @@ http://sources.nop.hu/cfg/rout-static08.tst;rout-static08.tst;success;static rou
 http://sources.nop.hu/cfg/rout-static09.tst;rout-static09.tst;success;recursive static routing
 http://sources.nop.hu/cfg/rout-static10.tst;rout-static10.tst;success;recursive static routing with labels
 http://sources.nop.hu/cfg/rout-static11.tst;rout-static11.tst;success;static routing with ecmp
+http://sources.nop.hu/cfg/rout-static12.tst;rout-static12.tst;success;static routing with udp tracker
+http://sources.nop.hu/cfg/rout-static13.tst;rout-static13.tst;success;static routing with twamp tracker
+http://sources.nop.hu/cfg/rout-static14.tst;rout-static14.tst;success;static routing with interface tracker
+http://sources.nop.hu/cfg/rout-static15.tst;rout-static15.tst;success;static routing with prefix tracker
+http://sources.nop.hu/cfg/rout-static16.tst;rout-static16.tst;success;static routing with other tracker
+http://sources.nop.hu/cfg/rout-static17.tst;rout-static17.tst;success;static routing with check tracker
+http://sources.nop.hu/cfg/rout-static18.tst;rout-static18.tst;success;static routing with nrpe tracker
 http://sources.nop.hu/cfg/serv-bmp01.tst;serv-bmp01.tst;success;static bmp peer
 http://sources.nop.hu/cfg/serv-bmp02.tst;serv-bmp02.tst;success;dynamic bmp peer
 http://sources.nop.hu/cfg/serv-dns01.tst;serv-dns01.tst;success;authoritative dns server
