@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.1.12-cur, done by cs@nop.<br/>
-tested: 2022-01-12 08:44:32, took 00:06:26, with 100 workers, on 2521 cases, 0 failed, 0 traces, 2 retries<br/>
+tested: 2022-01-12 09:17:51, took 00:07:54, with 100 workers, on 2528 cases, 0 failed, 0 traces, 6 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -2519,6 +2519,13 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-static09.tst">rout-static09.tst</a></td><td>success</td><td>recursive static routing</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-static10.tst">rout-static10.tst</a></td><td>success</td><td>recursive static routing with labels</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-static11.tst">rout-static11.tst</a></td><td>success</td><td>static routing with ecmp</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-static12.tst">rout-static12.tst</a></td><td>success</td><td>static routing with udp tracker</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-static13.tst">rout-static13.tst</a></td><td>success</td><td>static routing with twamp tracker</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-static14.tst">rout-static14.tst</a></td><td>success</td><td>static routing with interface tracker</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-static15.tst">rout-static15.tst</a></td><td>success</td><td>static routing with prefix tracker</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-static16.tst">rout-static16.tst</a></td><td>success</td><td>static routing with other tracker</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-static17.tst">rout-static17.tst</a></td><td>success</td><td>static routing with check tracker</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-static18.tst">rout-static18.tst</a></td><td>success</td><td>static routing with nrpe tracker</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/serv-bmp01.tst">serv-bmp01.tst</a></td><td>success</td><td>static bmp peer</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/serv-bmp02.tst">serv-bmp02.tst</a></td><td>success</td><td>dynamic bmp peer</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/serv-dns01.tst">serv-dns01.tst</a></td><td>success</td><td>authoritative dns server</td></tr>
